fixed extra white space on the right side of the page

--- a/dev/scss/_best-sellers.scss
+++ b/dev/scss/_best-sellers.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: left;
-    width: 100%;
+    width: 90%;
     margin: 0;
     
     h1 {
@@ -66,6 +66,7 @@
         flex-direction: row;
         justify-content: space-around;
         text-align: center;
+        width: 100%;
         margin: 0 -10px;
 
         h2 {
