--- a/dev/scss/_learn-more.scss
+++ b/dev/scss/_learn-more.scss
@@ -101,15 +101,15 @@ body{
 
 
 .overlay-content.primary{
-    height: 46.75%;
-    width: 93%;
+    height: 45.45%;
+    width: 90.5%;
     top: -1px;
     @include overlay-styling();
 }
 
 .overlay-content.secondary{
-    height: 46.75%;
-    width: 93%;
+    height: 45.45%;
+    width: 90.5%;
     top: 50%;
     @include overlay-styling();
 }
