--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -14,8 +14,9 @@
 @use "footer";
 
 body {
-    max-width: 1416px;
+    // max-width: 1416px;
     margin: 0;
+    padding-right: 0;
     background-color: white;
     font-family: 'Source Sans Pro', sans-serif;
     h1, h2, h3, h4, h5, h6 {
@@ -24,7 +25,8 @@ body {
     }
   
 }
-@media (min-width: 1416px){
-	body {
-		background-color: rgb(77, 76, 76);
-	  }	}
+// @media (min-width: 1416px){
+// 	body {
+// 		padding-left: 20px;
+//         padding-right: 20px;
+// 	  }	}
